Fixed Projects card view not responsive

--- a/src/style.css
+++ b/src/style.css
@@ -461,7 +461,11 @@ html {
   background-color: transparent !important;
   opacity: 0.9 !important;
   transition: all 0.5s ease 0s !important;
-  height: 80% !important; /*default 100*/
+  /*height: 100% !important;*/
+}
+
+.snake-boxes{
+  height: 100% !important;
 }
 
 .flappy-bird{
@@ -469,6 +473,10 @@ html {
 }
 
 .snake{
+  height: 100% !important;
+}
+
+.redux{
   height: 100% !important;
 }
 
